# mag-diffusion

./: .gitignore  README.md  create_data.ipynb  inspect_data.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  shape_test.ipynb  test_db.py
data/: magfield_32.h5
nbs/: create_data.ipynb  demonstration.ipynb  getting_started.ipynb  grad_test.ipynb  inspect_data.ipynb
src/pmdd/: data.py  eval.py  loss.py  networks.py  sample.py  train.py  train_pde.py
src/pmdd/mindiffusion/: ddpm.py  unet.py
src/pmdd/utils/: calc_utils.py  data_utils.py  plot_utils.py
